odradjen save za hospital

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:doctor.sql,classpath:patient.sql,classpath:nurse.sql,classpath:hospital.sql,classpath:specialization.sql,classpath:professorSubject.sql,classpath:examPeriod.sql,classpath:exam.sql,classpath:examRegistration.sql
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.datasource.data=classpath:doctor.sql,classpath:patient.sql,classpath:nurse.sql,classpath:hospital.sql,classpath:specialization.sql,classpath:professorSubject.sql,classpath:examPeriod.sql,classpath:exam.sql,classpath:examRegistration.sql
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 springdoc.api-docs.path=/api-docs
-#http://localhost:8080/swagger-ui.html
-springdoc.swagger-ui.path=/swagger-ui-custom.html
-server.servlet.context-path=/student-service-be
-server.port=8080
+
+server.port=8081
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
